Changelog
---------

1.0b2 (Unreleased)
^^^^^^^^^^^^^^^^^^


1.0b1 (2012-09-04)
^^^^^^^^^^^^^^^^^^

- Initial release.
