@@ -4,6 +4,8 @@ Changelog
 1.0b2 (Unreleased)
 ^^^^^^^^^^^^^^^^^^
 
+- Get the object from the catalog, in case it was modified by a previous rule. [frapell]
+
 
 1.0b1 (2012-09-04)
 ^^^^^^^^^^^^^^^^^^
